# chip8

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: cpu.h  decoder.h  globals.h  opcode.h  platform.h
src/: cpu.cpp  decoder.cpp  opcode.cpp
